Creados gestores usuarios y trabajadores